@@ -2034,11 +2034,21 @@
         recaptcha_challenge_field: challenge,
         recaptcha_response_field: response + ' '
       };
+      /*
+          if Conf['Preserve Whitespace']
+            post.com = post.com
+              .replace( /\t/g, '        ' )
+              .replace /^ +| {2,}/gm, (it) ->
+                it.replace `/  /g`, '▷ '
+              .replace /\n{3,}/g, (it) ->
+                it.replace /\n/g, '\n▷'
+      */
+
       if (Conf['Preserve Whitespace']) {
-        post.com = post.com.replace(/\t/g, '        ').replace(/^ +| {2,}/gm, function(it) {
-          return it.replace(/  /g, '▷ ');
+        post.com = post.com.replace(/\t/g, '\x01 \x01 \x01 \x01 ').replace(/^ +| {2,}/gm, function(it) {
+          return '\x01' + it.replace(/ /g, ' \x01');
         }).replace(/\n{3,}/g, function(it) {
-          return it.replace(/\n/g, '\n▷');
+          return it.replace(/\n/g, '\n\x01');
         });
       }
       form = new FormData();
