@@ -1545,6 +1545,7 @@ QR =
       recaptcha_challenge_field: challenge
       recaptcha_response_field:  response + ' '
     
+    ###
     if Conf['Preserve Whitespace']
       post.com = post.com
         .replace( /\t/g, '        ' )
@@ -1552,6 +1553,14 @@ QR =
           it.replace `/  /g`, '▷ '
         .replace /\n{3,}/g, (it) ->
           it.replace /\n/g, '\n▷'
+    ###
+    if Conf['Preserve Whitespace']
+      post.com = post.com
+        .replace( /\t/g, '\x01 \x01 \x01 \x01 ' )
+        .replace /^ +| {2,}/gm, (it) ->
+          '\x01' + it.replace `/ /g`, ' \x01'
+        .replace /\n{3,}/g, (it) ->
+          it.replace /\n/g, '\n\x01'
 
     form = new FormData()
     for name, val of post
